# code-companion

.claude/: ecc-tools.json  identity.json
.claude/commands/: multi-directory-pip-dependency-bump.md
.codex/: AGENTS.md
agent_apis/: pyproject.toml  requirements.txt
agent_chat/: pyproject.toml  requirements.txt
agent_rag/: pyproject.toml  requirements.txt
agent_stream/: pyproject.toml  requirements.txt
agent_todo/: pyproject.toml  requirements.txt
agent_tool/: pyproject.toml  requirements.txt
audio_transcript/: pyproject.toml  requirements.txt
child_workflows/: pyproject.toml  requirements.txt
community/bostondynamics_spot/: pyproject.toml
community/custom_llm_gemini/: pyproject.toml
community/defense_quickstart_audio_transcription_translation/: pyproject.toml
community/defense_quickstart_denoise/: pyproject.toml
community/defense_quickstart_news_scraper_summarizer/: pyproject.toml
community/e2b/: pyproject.toml
community/elevenlabs/: pyproject.toml
community/fastapi_gemini_feedback/: pyproject.toml
community/fastapi_togetherai_llama/: pyproject.toml
community/flask_gemini/: pyproject.toml
community/flask_togetherai_llamaindex/: pyproject.toml
community/gemini/: pyproject.toml
email_sender/: pyproject.toml  requirements.txt
encryption/: pyproject.toml  requirements.txt
human_loop/: pyproject.toml  requirements.txt
openai_greet/: pyproject.toml  requirements.txt
pdf_ocr/: pyproject.toml  requirements.txt
production_demo/: pyproject.toml  requirements.txt
re_act/: pyproject.toml  requirements.txt
(+10 files in other folders)
