[project]
name = "custom_llm_gemini"
version = "0.1.0"
description = ""
authors = []
requires-python = ">=3.10,<3.13"
readme = "README.md"
dependencies = [
    "pydantic>=2.10.6",
    "restack-ai==0.0.62",
    "watchfiles>=1.0.4",
    "python-dotenv==1.2.2",
    "flask==3.1.3",
    "requests==2.33.0",
    "aiohttp==3.13.5",
    "flask-cors==6.0.0",
    "rich==13.9.2",
    "google-generativeai==0.8.3",
    "h11==0.16.0",
]

[project.scripts]
llm = "src.llm:run_llm"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
